# kite-chess

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml  kite.yml  smyslov.yml
src/: CMakeLists.txt  bitboards.cpp  bitboards.hpp  board.cpp  board.hpp  evaluation.cpp  evaluation.hpp  magic.cpp  magic.hpp  main.cpp  movegen.cpp  movegen.hpp  moves.cpp  moves.hpp  perft.hpp  position.cpp  position.hpp  rays.cpp  rays.hpp  search.cpp  search.hpp  smyslov.cpp  types.hpp  uci.cpp  uci.hpp  zobrist.cpp  zobrist.hpp
src/nnue/: accumulator.cpp  accumulator.hpp  layers.cpp  layers.hpp  matrix.cpp  matrix.hpp  misc.hpp
tests/: CMakeLists.txt  test_board.cpp  test_magic.cpp  test_movegen.cpp  test_perft.cpp  test_position.cpp
